--- a/apsidal-precession-1.tex
+++ b/apsidal-precession-1.tex
@@ -101,15 +101,15 @@ We add the term $-\omega\Gamma\simeq = -\omega\left(\frac12\sqrt{\alpha}e^2\righ
 \subsection{Reducing the Hamiltonian}
 Through a series of canonical transformations and approximations, the Hamiltonian \ref{eq:TPH} (including the apsidal precession terms) can be reduced to 
 \begin{align}
-    \mathcal H(M,R) \simeq& - \frac{3 M^{2} j^{\frac{2}{3}} \left(j + 1\right)^{\frac{4}{3}}}{2} + \frac{M \omega_{{e}2}}{\mu^{\frac{2}{3}}} 
-    - \frac{R \left( \omega_{{e}1} - \omega_{{e}2}\right)}{\mu^{\frac{2}{3}}}
+    \mathcal H(M,R) \simeq& - \frac{3 M^{2} j^{\frac{2}{3}} \left(j + 1\right)^{\frac{4}{3}}}{2} + \frac{M \omega_{{\rm e}2}}{\mu^{\frac{2}{3}}} 
+    - \frac{R \left( \omega_{{\rm e}1} - \omega_{{\rm e}2}\right)}{\mu^{\frac{2}{3}}}
     \nonumber\\
     &+ \sqrt{2} \sqrt{R} \left(f_{1} \cos{\left(m + r \right)}
-        +\frac{e_{p} f_{2} \left(\omega_{{e}1} - \omega_{{e}2}\right) \cos{\left(r \right)}}{f_{1} \mu}\right)
+        +\frac{e_{p} f_{2} \left(\omega_{{\rm e}1} - \omega_{{\rm e}2}\right) \cos{\left(r \right)}}{f_{1} \mu}\right)
 \end{align}
 where the new canonical momentum-coordinate pairs are
 \begin{align}
-    R =& \frac{\sqrt{\alpha} e^{2} f_{1}^{2} - 2 \sqrt[4]{\alpha} e e_{p} f_{1} f_{2} \cos{\left(\omega_{{e}2} \tau - \varpi \right)} + e_{p}^{2} f_{2}^{2}}{2 f_{1}^{2} \mu^{\frac{2}{3}}}\\
+    R =& \frac{\sqrt{\alpha} e^{2} f_{1}^{2} - 2 \sqrt[4]{\alpha} e e_{p} f_{1} f_{2} \cos{\left(\omega_{{\rm e}2} \tau - \varpi \right)} + e_{p}^{2} f_{2}^{2}}{2 f_{1}^{2} \mu^{\frac{2}{3}}}\\
     &\leftrightarrow r = \mathrm{atan}\frac{e \sin{\left(g_{1} \right)}}{ \frac{e_{p} f_{2}}{f_{1} \sqrt[4]{a}}- e \cos{\left(g_{1} \right)}},\\
     M=&\frac{\sqrt{\alpha}- (j/(j+1))^{1/3} }{j \mu^{\frac{2}{3}}}
     \leftrightarrow m =  j l - \tau \left(j + 1\right),
@@ -189,19 +189,19 @@ A typical capture scenario for is demonstrated in Figure~\ref{fig:cm-control}.
 
 \begin{figure}
     \includegraphics[width=0.4\textwidth]{cm_1e-4_2e-4.png}
-    \caption{The same as Figure~\ref{fig:cm-control} but with $\omega_{1e}=10^{-4}$ and $\omega_{2e}=2\times10^{-4}$ ($\Delta\dot\varpi=\omega_{1e}-\omega_{2e}=-10^{-4}>0$). After around 4.5~Myr, $\theta_2$ begins circulating and eccentricities increase to orbit-crossing values (resulting in instability).}
+    \caption{The same as Figure~\ref{fig:cm-control} but with $\omega_{1\rm e}=10^{-4}$ and $\omega_{2\rm e}=2\times10^{-4}$ ($\Delta\dot\varpi_{\rm ext}=\omega_{1\rm e}-\omega_{2\rm e}=-10^{-4}>0$). After around 4.5~Myr, $\theta_2$ begins circulating and eccentricities increase to orbit-crossing values (resulting in instability).}
     \label{fig:cm-neg-dDpom}
 \end{figure}
 
 \begin{figure}
     \includegraphics[width=0.4\textwidth]{cm_2e-4_1e-4.png}
-    \caption{The same as Figure~\ref{fig:cm-control} but with $\omega_{1e}=2\times10^{-4}$ and $\omega_{2e}=10^{-4}$ ($\Delta\dot\varpi=\omega_{1e}-\omega_{2e}=10^{-4}>0$). After capture, $\theta_1$ and $\theta_2$ continue to librate but $e_2$ increases to orbit-crossing values (resulting in instability).
+    \caption{The same as Figure~\ref{fig:cm-control} but with $\omega_{1\rm e}=2\times10^{-4}$ and $\omega_{2\rm e}=10^{-4}$ ($\Delta\dot\varpi_{\rm ext}=\omega_{1\rm e}-\omega_{2\rm e}=10^{-4}>0$). After capture, $\theta_1$ and $\theta_2$ continue to librate but $e_2$ increases to orbit-crossing values (resulting in instability).
     }
     \label{fig:cm-pos-dDpom}
 \end{figure}
 
 \subsection{Constant Apsidal Precession}
-We add the terms $-\Gamma_1\omega_{1e}-\Gamma_2\omega_{2e}$ to the Hamiltonian (\ref{eq:CCMP_H}) to induce apsidal precession at the constant angular frequencies $\omega_{1e},\omega_{2e}$ on $\varpi_1,\varpi_2$, respectively. In particular, the following terms are added to the equations of motion,
+We add the terms $-\Gamma_1\omega_{1\rm e}-\Gamma_2\omega_{2\rm e}$ to the Hamiltonian (\ref{eq:CCMP_H}) to induce apsidal precession at the constant angular frequencies $\omega_{1\rm e},\omega_{2\rm e}$ on $\varpi_1,\varpi_2$, respectively. In particular, the following terms are added to the equations of motion,
 \begin{align}
     \left(\frac{d\varpi_1 }{dt}\right)_{\rm ext} = \frac{\omega_{1e}}{2\pi}, \\
     \left(\frac{d\varpi_2 }{dt}\right)_{\rm ext} = \frac{\omega_{2e}}{2\pi}.
