--- a/mixed resonance angle derivation.ipynb
+++ b/mixed resonance angle derivation.ipynb
@@ -68,7 +68,7 @@
      "output_type": "stream",
      "text": [
       "<>:5: SyntaxWarning: invalid escape sequence '\\,'\n",
-      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_6498/1608348942.py:5: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_55377/1608348942.py:5: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  \"f_1 f_2 f_3 f_4 tau lambda varpi varpi_p gamma \\\\omega_{\\\\rm{ext}} \\\\omega_{\\\\rm{p\\,ext}} theta Theta phi\"\n"
      ]
     }
@@ -1679,7 +1679,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Science",
    "language": "python",
    "name": "python3"
   },
