Mark BUG in secular part of test particle integrations.

--- a/paper-2.ipynb
+++ b/paper-2.ipynb
@@ -204,6 +204,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Warning",
+     "evalue": "There is a problem with the numerical values plugged in for b^1_3/2 and b^2_3/2 below and this defn of R.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mWarning\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mWarning\u001b[39;00m(\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere is a problem with the numerical values plugged \u001b[39m\u001b[38;5;124m\"\u001b[39m \\\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124min for b^1_3/2 and b^2_3/2 below and this defn of R.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m )\n",
+      "\u001b[0;31mWarning\u001b[0m: There is a problem with the numerical values plugged in for b^1_3/2 and b^2_3/2 below and this defn of R."
+     ]
+    }
+   ],
+   "source": [
+    "raise Warning(\n",
+    "    \"There is a problem with the numerical values plugged \" \\\n",
+    "    \"in for b^1_3/2 and b^2_3/2 below and this defn of R.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -893,6 +917,7 @@
     "convs = {}\n",
     "convs = {ap: n ** Rational(2, 3) / np ** Rational(2, 3) * a, th: thp + omp * t - pom}\n",
     "params = {}\n",
+    "raise Warning(\"These values plugged in are actually alpha0*b^1_3/2 and alpha0*b^2_3/2.\")\n",
     "params = {\n",
     "    j: 2,\n",
     "    mup: 1e-4,\n",
