--- a/symbols.ipynb
+++ b/symbols.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "<>:5: SyntaxWarning: invalid escape sequence '\\,'\n",
       "<>:5: SyntaxWarning: invalid escape sequence '\\,'\n",
-      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_23656/1608348942.py:5: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_4943/1608348942.py:5: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  \"f_1 f_2 f_3 f_4 tau lambda varpi varpi_p gamma \\\\omega_{\\\\rm{ext}} \\\\omega_{\\\\rm{p\\,ext}} theta Theta phi\"\n"
      ]
     },
@@ -126,6 +126,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.0252226899385954\n",
+      "2.4840051833039407\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f27lc(alpha0val, 2))\n",
+    "print(f31lc(alpha0val, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -220,7 +239,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Science",
    "language": "python",
    "name": "python3"
   },
