Get CM integrations to capture

--- a/symbols.ipynb
+++ b/symbols.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "<>:5: SyntaxWarning: invalid escape sequence '\\,'\n",
       "<>:5: SyntaxWarning: invalid escape sequence '\\,'\n",
-      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_4943/1608348942.py:5: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_3309/1608348942.py:5: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  \"f_1 f_2 f_3 f_4 tau lambda varpi varpi_p gamma \\\\omega_{\\\\rm{ext}} \\\\omega_{\\\\rm{p\\,ext}} theta Theta phi\"\n"
      ]
     },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.08476062046314\n",
+      "10.485706741948807\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For an external test particle\n",
+    "print(b(1.5, 1, alpha0val))\n",
+    "print(b(1.5, 2, alpha0val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +199,14 @@
     }
    ],
    "source": [
+    "# For an internal test particle\n",
     "print(alpha0val*b(1.5, 1, alpha0val))\n",
     "print(alpha0val*b(1.5, 2, alpha0val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
