--- a/paper-2.ipynb
+++ b/paper-2.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To-run list:\n",
+    "- [ ] $\\mu_p=5e-5$ random capture grid\n",
+    "    - CURRENT RESULTS HAVE $\\mu_p=1e-4$\n",
+    "- [x] $\\mu_p=5e-5$ random capture grid w/ $\\beta_p=0$\n",
+    "- [x] $\\mu_p=5e-5$ random capture grid w/ no secular effects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Wanting to plot $\\phi$ over time next"
    ]
   },
@@ -865,7 +876,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise Warning(\"Standard run used mup=1e-4.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Used mup=1e-4 in the \"standard\" run... again. Need to fix this. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +933,7 @@
        "              ⎦"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +984,7 @@
        "'lambda n,e,varpi,theta_p,n_p,t: ([0.000853042833571296*e*n**(4/3)*n_p**(2/3)*npy.sin(omega_p*t + theta_p - varpi) - 0.000695490377254464*e_p*n**(4/3)*n_p**(2/3)*npy.sin(theta_p), 0.000142173805595216*e**2*n**(1/3)*n_p**(2/3)*npy.sin(omega_p*t + theta_p - varpi) - 0.000115915062875744*e*e_p*n**(1/3)*n_p**(2/3)*npy.sin(theta_p) - 9.47825370634774e-5*n**(1/3)*n_p**(2/3)*npy.sin(omega_p*t + theta_p - varpi), omega + 9.47825370634774e-5*n**(1/3)*n_p**(2/3)*npy.cos(omega_p*t + theta_p - varpi)/e, 0.000142173805595216*e*n**(1/3)*n_p**(2/3)*npy.cos(omega_p*t + theta_p - varpi) + 3*n - 2*n_p - omega_p])'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently re-running all random grids. Realized had $\\mu_p=1e-4$, and had secular coefficients wrong.\n",
+    "Currently re-running all random grids. Realized had $\\mu_p=1e-4$, and had secular coefficients wrong. Currently standard grid has $\\mu_p=1e-4$.\n",
     "\n",
     "Currently, the \"standard\" and \"no sec\" grids has a randomly selected $\\varpi_0$, but the \"no bp\" runs do not. Need to change the latter to be in line with the former."
    ]
