Add working a3,e3 secular perturbations

--- a/symbols.ipynb
+++ b/symbols.ipynb
@@ -9,9 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:5: SyntaxWarning: invalid escape sequence '\\,'\n",
-      "<>:5: SyntaxWarning: invalid escape sequence '\\,'\n",
-      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_3309/1608348942.py:5: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "<>:6: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "<>:6: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "/var/folders/rv/30_ngz5x5l5djjdvflk_6wwm0000gn/T/ipykernel_51951/1304628237.py:6: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  \"f_1 f_2 f_3 f_4 tau lambda varpi varpi_p gamma \\\\omega_{\\\\rm{ext}} \\\\omega_{\\\\rm{p\\,ext}} theta Theta phi\"\n"
      ]
     },
@@ -36,6 +36,7 @@
    "source": [
     "import sympy as sm\n",
     "from sympy import init_session\n",
+    "from LaplaceCoefficients import *\n",
     "init_session()\n",
     "f1, f2, f3, f4, tau, l, pom, pom_p, g, om, om_p, th, Th, phi = sm.symbols(\n",
     "    \"f_1 f_2 f_3 f_4 tau lambda varpi varpi_p gamma \\\\omega_{\\\\rm{ext}} \\\\omega_{\\\\rm{p\\,ext}} theta Theta phi\"\n",
@@ -61,60 +62,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.special import hyp2f1\n",
-    "from sympy import init_printing, init_session\n",
-    "\n",
-    "def Pochhammer(a, k):\n",
-    "    if k == 0:\n",
-    "        return 1.0\n",
-    "    else:\n",
-    "        return (a + k - 1) * Pochhammer(a, k - 1)\n",
-    "\n",
-    "\n",
-    "def b(s, j, alpha):\n",
-    "    if j >= 0:  # Eq. 7.87\n",
-    "        return (\n",
-    "            2\n",
-    "            * Pochhammer(s, j)\n",
-    "            / Pochhammer(1, j)\n",
-    "            * (alpha**j)\n",
-    "            * hyp2f1(s, s + j, j + 1, alpha * alpha)\n",
-    "        )\n",
-    "    else:  # Eq. 6.69\n",
-    "        return b(s, -j, alpha)\n",
-    "\n",
-    "\n",
-    "def Db(s, j, alpha):  # Eq. 6.70\n",
-    "    aux = (\n",
-    "        b(s + 1, j - 1, alpha) - 2 * alpha * b(s + 1, j, alpha) + b(s + 1, j + 1, alpha)\n",
-    "    )\n",
-    "    return s * aux\n",
-    "\n",
-    "\n",
-    "def D2b(s, j, alpha):  # Eq. 6.71\n",
-    "    aux = (\n",
-    "        Db(s + 1, j - 1, alpha)\n",
-    "        - 2 * alpha * Db(s + 1, j, alpha)\n",
-    "        - 2 * b(s + 1, j, alpha)\n",
-    "        + Db(s + 1, j + 1, alpha)\n",
-    "    )\n",
-    "    return s * aux\n",
-    "\n",
-    "\n",
-    "def f27lc(alpha, j):\n",
-    "    \"\"\"\n",
-    "    f27 in MD p543\n",
-    "    (1/2)[−2 j − αD] b^(j)_{1/2}(α) x [e1cos(theta1)]\n",
-    "    \"\"\"\n",
-    "    return 0.5 * (-2 * (j + 1) * b(0.5, j + 1, alpha) - alpha * Db(0.5, j + 1, alpha))\n",
-    "\n",
-    "\n",
-    "def f31lc(alpha, j):\n",
-    "    \"\"\"\n",
-    "    f31 in MD p543\n",
-    "    (1/2)[−1 + 2 j + αD] b^(j-1)_{1/2}(α) x [e2cos(theta2)]\n",
-    "    \"\"\"\n",
-    "    return 0.5 * ((-1 + 2 * (j + 1)) * b(0.5, j, alpha) + alpha * Db(0.5, j, alpha))\n",
     "\n",
     "############################################################\n",
     "# If test particle is outside, have to multiply by alpha_0 #\n",
