--- a/paper-3 notes.ipynb
+++ b/paper-3 notes.ipynb
@@ -31,10 +31,15 @@
     "- For mu3=1e-3, a3=5, e3=0.3, Tm=1e6, Te=1e4 librations grow in amplitude and they escape from resonance around a1=0.2-0.4 or so..\n",
     "  - Also appears to occur without mu3 and without secular m1-m2\n",
     "  - Possible numerical effect or something?\n",
-    "  - I wonder if it's overstable libration like Goldreich & Schlichting 2014?\n",
-    "\n",
+    "  - I wonder if it's overstable libration like Goldreich & Schlichting 2014?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Realistic ecc damping\n",
-    "  - h=0.01 mu3=1e-2 a3=5 e3=0.3 Tm=1e6\n",
+    "  - h=0.01 mu3=1e-2 a3=5 e3=0.3 Tm/P20=1e6\n",
     "    - 3e-6, 6e-6 capture\n",
     "    - 3e-5, 6e-5 capture"
    ]
@@ -43,12 +48,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Very slow migration $\\Rightarrow$ weak ecc damping"
+    "- Very slow migration $\\Rightarrow$ weak ecc damping\n",
+    "  - 1 and 2 $M_\\oplus$ planets\n",
+    "  - mu3=1e-2 a3=5 e3=0.3 Tm/P20=1e8\n",
+    "    - h=0.1 capture\n",
+    "    - h=0.01 capture\n",
+    "    - h=0.01 a3=3 disrupt\n",
+    "    - h=0.1 a3=3 disrupt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- Close in  giant planet\n",
+    "  - 1 and 2 $M_\\oplus$ planets\n",
+    "  - mu3=1e-2 a3=3 e3=0.3 Tm/P20=1e7 h=0.1\n",
+    "    - disrupt\n",
+    "  - mu3=1e-3\n",
+    "    - disrupt\n",
+    "  - mu3=1e-3 a3=4\n",
+    "    - capture\n",
+    "  - mu3=1e-3 e3=0.2\n",
+    "    - disrupt\n",
+    "  - mu3=1e-3 e3=0.1\n",
+    "    - capture\n",
+    "  - mu3=1e-2 e3=0.1\n",
+    "    - capture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
