--- a/paper-3 notes.ipynb
+++ b/paper-3 notes.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Close in  giant planet\n",
+    "- Close in  giant planet with Cresswell & Nelson Tes\n",
     "  - 1 and 2 $M_\\oplus$ planets\n",
     "  - mu3=1e-2 a3=3 e3=0.3 Tm/P20=1e7 h=0.1\n",
     "    - disrupt\n",
@@ -74,7 +74,13 @@
     "  - mu3=1e-3 e3=0.1\n",
     "    - capture\n",
     "  - mu3=1e-2 e3=0.1\n",
-    "    - capture"
+    "    - capture\n",
+    "  - mu3=1e-3 e3=0.2 with constant Te's\n",
+    "    - capture\n",
+    "  - mu3=1e-3 e3=0.3 with constant Te's\n",
+    "    - capture\n",
+    "  - mu3=1e-3 e3=0.2 h=0.03\n",
+    "    - disrupt"
    ]
   },
   {
@@ -86,8 +92,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Science",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
