Add work on FLI/separatrix plots

--- a/FLI.ipynb
+++ b/FLI.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- The resonant coefficients in this notebook are the wrong sign\n",
+    "  - Which is why the separatrix in FLI plots is shifted by $\\pi$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Preamble"
    ]
   },
@@ -225,6 +233,25 @@
     "    #.subs(a, a * a_p)\n",
     ") + T\n",
     "display(calH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beta= -1.5455341716765871\n",
+      "beta_p= -1.8956507412695471\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"beta=\",f1val_outside)\n",
+    "print(\"beta_p=\",-f2val_outside)"
    ]
   },
   {
