Add comment on poincaire sections

--- a/paper-2-poincaire.ipynb
+++ b/paper-2-poincaire.ipynb
@@ -77,7 +77,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "THESE ARE NOT CONSTANT ENERGY EITHER BECAUSE GAMMA GOES INTO DENOMINATOR WHERE LAMBDA IS"
+    "THESE ARE NOT CONSTANT ENERGY EITHER BECAUSE GAMMA GOES INTO DENOMINATOR WHERE LAMBDA IS\n",
+    "\n",
+    "Wait, no, it only comes in as J1+J2 = Lambda/(j+1)"
    ]
   },
   {
