--- a/paper-3 notes.ipynb
+++ b/paper-3 notes.ipynb
@@ -84,6 +84,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So if i want to do gas off after capture into resonance, for instability don't i need to do full Nbody? or is orbit crossing eccentricities sufficient?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
