--- a/EOMs.ipynb
+++ b/EOMs.ipynb
@@ -108,7 +108,8 @@
     "# Precession frequencies\n",
     "om, omp = symbols(\"omega omega_p\")\n",
     "# Functions of time\n",
-    "ap, lp, np, a, l, pom, th, thp, alpha = symbols(\"a_p lambda_p n_p a lambda varpi theta theta_p alpha\") \n",
+    "lp, np, l, pom, th, thp = symbols(\"lambda_p n_p lambda varpi theta theta_p\") \n",
+    "ap, a, alpha = symbols(\"a_p a alpha\", positive=True)\n",
     "# Positive functions of time\n",
     "e = symbols(\"e\", positive=True)\n",
     "# Actions\n",
